# KFTGEngine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENCE  README.md
source/: CMakeLists.txt  main.cpp
source/Common/: CMakeLists.txt  Common.cpp  Module.hpp  Singleton.hpp  types.hpp
source/Core/: AssetManager.cpp  AssetManager.hpp  AssetTypes.cpp  AssetTypes.hpp  AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  DisplayManager.cpp  DisplayManager.hpp  EventManager.cpp  EventManager.hpp  Filesystem.cpp  Filesystem.hpp  InputManager.cpp  InputManager.hpp  Keys.hpp  Math.cpp  Math.hpp  Module.hpp  Root.cpp  Root.hpp  Time.cpp  Time.hpp  array.hpp  map.hpp  string.cpp  string.hpp  types.hpp
source/Core/Asset/: AssetManager.cpp  AssetManager.hpp  AssetTypes.cpp  AssetTypes.hpp  CMakeLists.txt  Filesystem.cpp  Filesystem.hpp
source/Core/Audio/: AudioManager.hpp  CMakeLists.txt
source/Core/Display/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.hpp
source/Core/Event/: CMakeLists.txt  EventManager.cpp  EventManager.hpp  InputManager.hpp
source/Core/Memory/: Allocators.cpp  Allocators.hpp  CMakeLists.txt  MemoryManager.cpp  MemoryManager.hpp
source/Core/Time/: CMakeLists.txt  Time.cpp  Time.hpp
source/Engine/: CMakeLists.txt
source/Engine/App/: CMakeLists.txt  main.cpp
source/Engine/Asset/: AssetManager.cpp  AssetManager.hpp  AssetTypes.cpp  AssetTypes.hpp  CMakeLists.txt  Filesystem.cpp  Filesystem.hpp
source/Engine/Common/: CMakeLists.txt  Math.cpp  Math.hpp  Module.hpp  Root.cpp  Root.hpp  Singleton.hpp  Time.cpp  Utils.cpp  Utils.hpp  string.cpp  string.hpp  types.hpp
source/Engine/Core/: AssetManager.cpp  AssetManager.hpp  AssetTypes.hpp  CMakeLists.txt  Filesystem.cpp  Filesystem.hpp  Input.cpp  Input.hpp  Math.hpp  Module.hpp  Root.cpp  Root.hpp  Time.cpp  Time.hpp  engine.hpp  map.hpp  string.cpp  string.hpp  types.hpp
source/Engine/Memory/: Allocators.cpp  Allocators.hpp  CMakeLists.txt  MemoryManager.cpp  MemoryManager.hpp
source/Logic/: CMakeLists.txt  Logic.cpp  Logic.hpp  World.cpp  World.hpp
source/Logic/Component/: Animator.hpp  CMakeLists.txt  Camera.hpp  Collider.hpp  Component.hpp  ComponentHandle.cpp  ComponentHandle.hpp  ComponentManager.hpp  Components.cpp  HUD.hpp  Motion.hpp  Player.hpp  Sprite.hpp  Transform.hpp
source/Logic/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityHandle.cpp  EntityHandle.hpp  EntityManager.cpp  EntityManager.hpp
source/Logic/System/: CMakeLists.txt  System.cpp  System.hpp
source/Logic/World/: CMakeLists.txt  World.cpp  World.hpp
source/Memory/: Allocators.cpp  Allocators.hpp  CMakeLists.txt  MemoryManager.cpp  MemoryManager.hpp
